--- a/components/auth/flip-card.css
+++ b/components/auth/flip-card.css
@@ -29,9 +29,17 @@
     text-align: center;
 }
 
-/* switch card */
+/* switch container */
+.card-switch {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 250px;
+}
+
+/* switch */
 .switch {
-    transform: translateY(-200px);
     position: relative;
     display: flex;
     flex-direction: column;
